# toxicnotifications

./: .coveragerc  MANIFEST.in  pyproject.toml  requirements.txt  toxicbuild.yml
docs/source/: CHANGELOG.rst  conf.py  config.rst  index.rst
scripts/: build_docs.sh  check_coverage.sh  release.sh  run_linter.sh
testdata/: toxicmaster.conf  toxicnotifications.conf
tests/: __init__.py
tests/functional/: __init__.py  custom_webhook.py  test_notifications.py
tests/unit/: __init__.py  test_base.py  test_custom_webhooks.py  test_email.py  test_fields.py  test_server.py  test_slack.py
toxicnotifications/: __init__.py  base.py  cmds.py  custom_webhook.py  email.py  server.py  slack.py
toxicnotifications/templates/: toxicnotifications.conf.tmpl
