[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "toxicnotifications"
dynamic = ["version"]
authors = [
  { name="me@myself.com" },
]
description = "toxicnotifications: Build status notifications for toxicbuild"
readme = "README.md"

dependencies = [
    'toxiccore>=0.11.0',
    'toxiccommon>=0.10.0',
    'mongomotor>=0.16.2',
    'pyrocumulus>=0.12.4',
]

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'

]


[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
include = ["toxicnotifications"]

[tool.setuptools.dynamic]
version = {attr = "toxicnotifications.__version__"}

[project.scripts]
toxicslave = "toxicnotifications.cmds:main"